<resources>
    <string name="app_name">Project5-CS213-Spring2021</string>
    <string name="order_coffee_button">Order Coffee</string>
    <string name="order_donut_button">Order Donuts</string>
    <string name="current_order_button">Current Order</string>
    <string name="store_orders_button">Store Orders</string>
    <string name="title">RU Café Dashboard</string>
    <string name="coffeePageTitle1">ORDER COFFEE</string>
    <string name="coffeePageTitle2">Order Coffee</string>
    <string name="donutPageTitle">Order Donuts</string>
    <string name="orderDetailsPageTitle">Current Order Details</string>
    <string name="storeOrdersPageTitle">Store Orders</string>
    <string name="mainMenuPageTitle">RU Cafe Main Menu</string>
    <string name="donutPageTitle2">Add Donut</string>

    <string-array name="coffeeSizes" >
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>
    <string-array name="coffeeCount" >
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="cream_checkbox">Cream</string>
    <string name="syrup_checkbox">Syrup</string>
    <string name="milk_checkbox">Milk</string>
    <string name="caramel_checkbox">Caramel</string>
    <string name="whippedCream_checkbox">Whipped Cream</string>
    <string name="place_coffee_order">Place Coffee Order</string>

    <string-array name="donutCount" >
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="donutFlavors" >
        <item>Strawberry</item>
        <item>Vanilla</item>
        <item>Chocolate</item>
    </string-array>
    <string name="add_donut_button">Add To Order</string>
    <string name="flavor">flavor</string>
    <string name="remove_donut">Donut has been removed.</string>
    <string name="dollar_sign">$</string>
    <string name="selectable_donuts">Donuts Flavors Available:</string>
    <string name="selected_donuts">Donuts Selected:</string>
    <string name="remove_button">Remove</string>
    <string name="remove_dialong">Remove the donut from the order?</string>
    <string name="cancel_button">Cancel</string>

    <string name="noSelectionDialogue">Error: No item was selected! Try Again!</string>
    <string name="noItemDialogue">Error: There are no items to delete!</string>
    <string name="noOrderDialogue">Error: There are no orders to delete!</string>
    <string name="orderDeletedDialogue">Order Successfully Deleted!</string>
    <string name="noItemToOrderDialogue">Error: There are no items to order!</string>
    <string name="noDonutsToOrderDialogue">Error: There are no donuts to order!</string>
    <string name="coffeeSuccessDialogue">Coffee(s) Successfully Added!</string>
    <string name="donutSuccessDialogue">Donut(s) Successfully Added!</string>
    <string name="orderSuccessDialogue">Order Successfully Placed!</string>
    <string name="changesSavedDialogue">Order Changes Saved!</string>

    <string name="removeMenuItemButtonText">Remove Item</string>
    <string name="submitOrderButtonText">Submit Order</string>
    <string name="subtotalLabel">Subtotal</string>
    <string name="taxLabel">Tax</string>
    <string name="totalLabel">Total</string>

    <string name="cancelOrder">Cancel Order</string>
</resources>